@@ -1400,7 +1400,7 @@ class FileList:
 
 		self.tagreaders.add_task(tagreader)
 
-	def add_uris(self, uris, base=None, filter=None):
+	def add_uris(self, uris, base=None, extensions=None):
 		files = []
 		self.window.set_status(_('Adding files...'))
 
@@ -1432,8 +1432,13 @@ class FileList:
 			if info.type == gnomevfs.FILE_TYPE_DIRECTORY:
 				log('walking: \'%s\'' % uri)
 				filelist = vfs_walk(gnomevfs.URI(uri))
-				if filter:
-					filelist = [f for f in filelist if f.lower().endswith(filter)]
+				accepted = []
+				if extensions:
+					for f in filelist:
+						for extension in extensions:
+							if f.lower().endswith(extension):
+								accepted.append(f)
+					filelist = accepted
 
 				files.extend(filelist)
 			else:
@@ -2586,13 +2591,12 @@ class SoundConverterWindow(GladeWindow):
 		if ret == gtk.RESPONSE_OK:
 
 			folders = self.addfolderchooser.get_uris()
-
-			filter = None
+			extensions = None
 			if self.combo.get_active():
-				filter = os.path.splitext(filepattern[self.combo.get_active()]
-						[1]) [1]
+				patterns = filepattern[self.combo.get_active()][1].split(';')
+				extensions = [os.path.splitext(p)[1] for p in patterns]
 
-			self.filelist.add_uris(folders, filter=filter)
+			self.filelist.add_uris(folders, extensions=extensions)
 
 			self.prefs.set_string('last-used-folder', self.addfolderchooser.get_current_folder_uri())
 
